# Football_cv

./: .gitattributes  .gitignore  README.md  create_demo.sh  example.ipynb  main.py  pyproject.toml  sample_frame_detection.json  yolo_inference.py
calibration/: __init__.py  field_corner_selector.py
camera_movement_estimator/: camera_movement_estimator.py  sample.ipynb
development_and_analysis/: color_assignment.ipynb
models/: best.pt  last.pt
player_ball_assigner/: player_ball_assigner.py
speed_and_distance_estimator/: speed_and_distance_estimator.py
stubs/: track_stubs.pkl
team_assigner/: __init__.py  team_assinger.py
trackers/: tracker.py
training/: football_training_yolo_v5.ipynb
utils/: __init__.py  bbox_utils.py  video_utils.py
view_transformer/: view_transformer.py
