[project]
name = "football-cv-project"
version = "0.1.0"
description = "\"This is an computer vision project package for object detection and tracking\""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
package-mode = "false"
requires-python = ">=3.9"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "ultralytics (>=8.3.81,<9.0.0)",
    "roboflow (>=1.1.54,<2.0.0)",
    "importlib-resources (==6.5.2)",
    "supervision (>=0.25.1,<0.26.0) ; python_version >= \"3.9\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

